manifest/templates/ai.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: briefer
  name: briefer-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: briefer-ai
  template:
    metadata:
      labels:
        app: briefer-ai
    spec:
      containers:
      - name: api
        image: briefercloud/briefer-ai 
        livenessProbe:
          exec:
            command: ['CMD-SHELL', 'curl -f http://localhost:8000/ping || exit 1']
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5                                                                      
          timeoutSeconds: 10 
        ports:
        - containerPort: 8000 
          name: ai-port
---
apiVersion: v1
kind: Service
metadata:
  namespace: briefer
  name: briefer-ai-service
spec:
  selector:
    app: briefer-ai
  ports:
  - protocol: TCP
    port: 8000 
    targetPort: ai-port
