manifest/templates/web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: briefer
  name: briefer-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: briefer-web
  template:
    metadata:
      labels:
        app: briefer-web
    spec:
      containers:
      - name: api
        image: briefercloud/briefer-web
        livenessProbe:
          exec:
            command: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USERNAME:?error} -d briefer || exit 1']
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3                                                                      
          timeoutSeconds: 5
        ports:
        - containerPort: 3000 
          name: web-port
---
apiVersion: v1
kind: Service
metadata:
  namespace: briefer
  name: briefer-web-service
spec:
  selector:
    app: briefer-web
  ports:
  - protocol: TCP
    port: 3000 
    targetPort: web-port
